# bempp-rs-benchmarking

./: .gitignore  LICENSE  README.md  data.json  make_html.py  process_results.py  push.py  run.sh  setup.sh  update_website.py
.github/scripts/: make_and_upload_html.py  make_html.py  update_data.py
.github/workflows/: push-html.yml  test.yml
test-benchmark-code/: Cargo.toml
test-benchmark-code/benches/: test.rs
